--- a/page1.html
+++ b/page1.html
@@ -14,7 +14,7 @@
     <h2>Las 10 principales tendencias tecnológicas </h2>
     <p>Segun los analistas de Gartner las agruparon en tres temas: los imperativos
      y riesgos de la IA, las nuevas fronteras de la computación y la sinergia humano-máquina. 
-        Enterate de estas tecnologias <a href="https://www.gartner.es/es/articulos/principales-tendencias-tecnologicas-2025" target="_blank">aqui!</a></p>
+        Enterate de estas tecnologia <a href="https://www.gartner.es/es/articulos/principales-tendencias-tecnologicas-2025" target="_blank">aqui!</a></p>
     <a href="page2.html" title="Imagen siguiente" class="link-button">Siguiente imagen =&gt;</a>
     
 </body>
